--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,38 +40,36 @@
 					<span class="navbar-toggler-icon"></span>
 				</button>
 
-				<div
-					class="" id="navbarColor01">{# <ul class="navbar-nav mr-auto">
-																														<li class="nav-item">
-																															<a class="nav-link item-action" href="{{ url('home') }}">Accueil<span class="sr-only">(current)</span>
-																															</a>
-																														</li>
-																														<li class="nav-item">
-																															<a class="nav-link item-action" href="{{ url('presentation') }}">Présentation</a>
-																														</li>
-																														<li class="nav-item">
-																															<a class="nav-link item-action" href="{{ url('news') }}">News</a>
-																														</li>
-																														<li class="nav-item">
-																															<a class="nav-link item-action" href="{{ url('contact') }}">Contact</a>
-																														</li>
-																													</ul> #}
+				<div class="" id="navbarColor01">
+					<ul class="navbar-nav mr-auto">
+						<li class="nav-item">
+							<a class="nav-link item-action" href="{{ url('home') }}">Accueil<span class="sr-only">(current)</span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link item-action" href="{{ url('presentation') }}">Présentation</a>
+						</li>
+						{# <li class="nav-item">
+																									<a class="nav-link item-action" href="{{ url('news') }}">News</a>
+																								</li> #}
+						<li class="nav-item">
+							<a class="nav-link item-action" href="{{ url('contact') }}">Contact</a>
+						</li>
+					</ul>
 				</div>
-				<div
-					class="d-flex" id="divBoutonNav">{# <div class="ml-auto p-2">
-																														{% if is_granted('ROLE_USER') %}
-																															<a href="{{ path('app_logout') }}">
-																																<button type="button" class="btn btn-lg" id="boutonNav">Deconnexion</button>
-																															</a>
-																														{% else %}
-																															<a href="{{ path('home_admin_index') }}">
-																																<button type="button" class="btn btn-lg" id="boutonNav">Connexion</button>
-																															</a>
-																														{% endif %}
-																													</div> #}
+				<div class="d-flex" id="divBoutonNav">
+					<div class="ml-auto p-2">
+						{% if is_granted('ROLE_USER') %}
+							<a href="{{ path('app_logout') }}">
+								<button type="button" class="btn btn-lg" id="boutonNav">Deconnexion</button>
+							</a>
+						{% else %}
+							<a href="{{ path('home_admin_index') }}">
+								<button type="button" class="btn btn-lg" id="boutonNav">Connexion</button>
+							</a>
+						{% endif %}
+					</div>
 				</div>
-
-
 			</nav>
 
 		</header>
@@ -127,7 +125,7 @@
 					<small>Copyright &copy; 2021 Burning Zone -
 						<a href="" id="btnmentionslegales">Mentions Légales</a>
 						-
-						{# <a href="{{ path('home_admin_index') }}">Espace adhérent / Administrateur</a> #}
+						<a href="{{ path('home_admin_index') }}">Espace adhérent / Administrateur</a>
 					</small>
 
 					<div style="margin-top:15px;">
