--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -50,8 +50,8 @@
 							<a class="nav-link item-action" href="{{ url('presentation') }}">Présentation</a>
 						</li>
 						{# <li class="nav-item">
-																									<a class="nav-link item-action" href="{{ url('news') }}">News</a>
-																								</li> #}
+																																																																									<a class="nav-link item-action" href="{{ url('news') }}">News</a>
+																																																																								</li> #}
 						<li class="nav-item">
 							<a class="nav-link item-action" href="{{ url('contact') }}">Contact</a>
 						</li>
@@ -156,6 +156,9 @@ mentionslegales.style.display = "none";
 			<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft   +2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+			<link href="https://cdn.jsdelivr.net/npm/tom-select@2.0.0-rc.2/dist/css/tom-select.css" rel="stylesheet">
+			<script src="https://cdn.jsdelivr.net/npm/tom-select@2.0.0-rc.2/dist/js/tom-select.complete.min.js"></script>
+			<script src="/app.js"></script>
 		</body>
 	</body>
 </html>
