Add Image Uploader

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,6 +9,7 @@
 	<h1>Enregistrer un(e) nouvel(le) adhérent(e)</h1>
 
 	{{ form_start(registrationForm) }}
+	{# Si la route est "annonces_edit on affiche les images #}
 	{{ form_row(registrationForm.email) }}
 	{{ form_row(registrationForm.nom) }}
 	{{ form_row(registrationForm.prenom) }}
@@ -16,7 +17,7 @@
 	{# {{ form_row(registrationForm.roles) }} #}
 	{{ form_row(registrationForm.adresse) }}
 	{{ form_row(registrationForm.telephone) }}
-	{# {{ form_row(registrationForm.imageFile) }} #}
+	{{ form_row(registrationForm.images) }}
 	{{ form_row(registrationForm.plainPassword) }}
 
 
