--- a/templates/coach/_form.html.twig
+++ b/templates/coach/_form.html.twig
@@ -1,4 +1,17 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn btn-danger mb-3">{{ button_label|default('Sauvegarder') }}</button>
+{{ form_widget(form) }}
+{# Si la route est "annonces_edit on affiche les images #}
+{% if app.request.attributes.get('_route') == 'annonces_edit' %}
+	<h2>Images</h2>
+	{% for image in coach.images %}
+		<div>
+			<img
+			src="{{ asset('/uploads/'~image.name) }}" alt="" width="150">
+
+			{# On ajoute un lien permettant de supprimer une image (sera géré en Ajax) #}
+			<a href="{{ path('coachs_delete_image', {id: image.id})}}" data-delete data-token="{{ csrf_token('delete' ~ image.id )}}">Supprimer</a>
+		</div>
+	{% endfor %}
+{% endif %}
+<button class="btn btn-danger mb-3">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
