--- a/templates/user/_delete_form.html.twig
+++ b/templates/user/_delete_form.html.twig
@@ -1,5 +1,7 @@
-<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
-    <button type="submit" class="btn btn-primary btn-sm rounded"><i class="fas fa-trash-alt"></i></button>
+<form method="post" action="{{ path('user_delete', {'id': user.id}) }}" onsubmit="return confirm(Êtes vous sur de vouloir supprimer cet élément ?);">
+	<input type="hidden" name="_method" value="DELETE">
+	<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user.id) }}">
+	<button type="submit" class="btn btn-primary btn-sm rounded">
+		<i class="fas fa-trash-alt"></i>
+	</button>
 </form>
