--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -3,10 +3,9 @@
 {{ form_row(form.nom) }}
 {{ form_row(form.prenom) }}
 {{ form_row(form.DateDeNaissance) }}
-{{ form_row(form.roles) }}
 {{ form_row(form.adresse) }}
 {{ form_row(form.telephone) }}
-{# {{ form_row(form.imageFile) }} #}
+{{ form_row(form.images) }}
 <button type="submit" class="btn btn-info btn-sm rounded">
 	<i class="fas fa-edit"></i>
 	Modifier
