--- a/templates/presentation/coach.html.twig
+++ b/templates/presentation/coach.html.twig
@@ -90,23 +90,23 @@
 					</h3>
 					<div class="col-4">
 						<img
-						src="{{ asset('image/photocoach1.jpg') }}" alt="Photo Coach" id="photoCoach" class="w-100">
+						src="{{ asset('image/arnold_S.jpeg') }}" alt="Photo Coach" id="photoCoach" class="w-180">
 						{# image il faut qu'elle fasse 200*200#}
-						<h5 id="coach" class="">Noel BERTRAND</h5>
+						<h5 id="coach" class="">Arnold SCHWARZENEGGER</h5>
 						<p id="texte">Nostrud non ad magna nostrud mollit laboris do.</p>
 					</div>
 					<div class="col-4">
 						<img
-						src="{{ asset('image/photocoach1.jpg') }}" alt="Photo Coach" id="photoCoach" class="w-100">
+						src="{{ asset('image/cristiano_ronaldo.jpeg') }}" alt="Photo Coach" id="photoCoach" class="w-150">
 						{# image il faut qu'elle fasse 200*200#}
-						<h5 id="coach" class="">Noel BERTRAND</h5>
+						<h5 id="coach" class="">Cristiano RONALDO</h5>
 						<p id="texte">Nostrud non ad magna nostrud mollit laboris do.</p>
 					</div>
 					<div class="col-4">
 						<img
-						src="{{ asset('image/photocoach1.jpg') }}" alt="Photo Coach" id="photoCoach" class="w-100">
+						src="{{ asset('image/Sylvester_Stallone.jpeg') }}" alt="Photo Coach" id="photoCoach" class="w-180">
 						{# image il faut qu'elle fasse 200*200#}
-						<h5 id="coach" class="">Noel BERTRAND</h5>
+						<h5 id="coach" class="">Syleverster STALLONE</h5>
 						<p id="texte">Nostrud non ad magna nostrud mollit laboris do.</p>
 					</div>
 				</div>
