--- a/templates/training/show.html.twig
+++ b/templates/training/show.html.twig
@@ -5,51 +5,58 @@
 
 {% block body %}
 
-	<div class="container-fluid mb-3">
-		<a href="{{ path('home_training_index', {'id': app.user.id}) }}">
-			<button type="submit" class="btn btn-danger btn-sm rounded">
-				<i class="fas fa-caret-left"></i>
-				Retour
-			</button>
-		</a>
-	</div>
+<div class="container-fluid mb-3">
+	<a href="{{ path('home_training_index', {'id': app.user.id}) }}">
+		<button type="submit" class="btn btn-danger btn-sm rounded">
+			<i class="fas fa-caret-left"></i>
+			Retour
+		</button>
+	</a>
+</div>
 
-	<div class="card primary" style="max-width: 50rem;">
-		<div class="card-header d-flex justify-content-between">
-			<h1 style="margin-top: 40px">{{ training.nom }}</h1>
-		</div>
-		<div class="card-body" style="margin-top:-20px">
-			<table class="table">
-				<tbody>
+<div class="card primary" style="max-width: 50rem;">
+	<div class="card-header d-flex justify-content-between">
+		<h1 style="margin-top: 40px">{{ training.nom }}</h1>
+	</div>
+	<div class="card-body" style="margin-top:-20px">
+		<table class="table">
+			<tbody>
+				<tr>
+					<th>Référence du cours</th>
+					<td>{{ training.id }}</td>
+				</tr>
+				<tr>
+					<th>Date et heure du cours</th>
+					<td>{{ training.date ? training.date|date('d/m/Y H:i') : '' }}</td>
+				</tr>
+				{% if training.coach %}
 					<tr>
-						<th>Référence du cours</th>
-						<td>{{ training.id }}</td>
+						<th>Coach</th>
+						<td>{{ training.coach }}</td>
 					</tr>
+				{% endif %}
+				{% if is_granted('ROLE_COACH') %}
 					<tr>
-						<th>Date et heure du cours</th>
-						<td>{{ training.date ? training.date|date('d/m/Y H:i') : '' }}</td>
+						<th>Participant(s)</th>
+						<td>
+							{% for user in training.users %}
+								<a href="{{ path('user_show',{id: user.id}) }}">
+									{{ user.prenom }}
+									{{ user.nom }}<br/>
+								</a>
+							{% endfor %}
+						</td>
 					</tr>
-					{% if training.coach %}
-						<tr>
-							<th>Coach</th>
-							<td>{{ training.coach }}</td>
-						</tr>
-					{% endif %}
-					{% if is_granted('ROLE_COACH') %}
-						<tr>
-							<th>Participant(s)</th>
-							<td>
-								{% for user in training.users %}
-									<a href="{{ path('user_show',{id: user.id}) }}">
-										{{ user.prenom }}
-										{{ user.nom }}<br/>
-									</a>
-								{% endfor %}
-							</td>
-						</tr>
-					{% endif %}
-				</tbody>
+				{% endif %}
 			</tbody>
-		</tr>
-	</tbody>
-</table></div></div><a href="{{ path('training_index') }}">back to list</a><a href="{{ path('training_edit', {'id': training.id}) }}">edit</a>{{ include('training/_delete_form.html.twig') }}{% endblock %}
+		</table>
+	</div>
+</div>
+{% if is_granted('ROLE_ADMIN') %}
+	<div class="container mb-3 mr-3 mt-3"></a>
+	<a href="{{ path('training_edit', {'id': training.id}) }}">
+		<button type="submit" class="btn btn-info btn-sm rounded">
+			<i class="fas fa-edit"></i>Modifier</button>
+	</a>
+</div>
+<div class="container mt-3">{{ include('training/_delete_form.html.twig') }}</div>{% endif %}{% endblock %}
