--- a/templates/training/edit.html.twig
+++ b/templates/training/edit.html.twig
@@ -1,15 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Training{% endblock %}
+{% block title %}Edit Training
+{% endblock %}
 
 {% block body %}
-    <h1>Modifier un cours</h1>
+	<h1>Modifier un cours</h1>
 
-    {{ include('training/_form.html.twig', {'button_label': 'Sauvegarder'}) }}
+	{{ include('training/_form.html.twig', {'button_label': 'Sauvegarder'}) }}
 
- 
 
-    {{ include('training/_delete_form.html.twig') }}  
-    
-    <a class="btn btn-info mt-3" href="{{ path('training_index') }}">Retour à la liste</a>
+	{{ include('training/_delete_form.html.twig') }}
+
+	<a class="btn btn-info mt-3" href="{{ path('training_index') }}">Retour à la liste</a>
 {% endblock %}
